--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Jan 04 16:23:19 IST 2025
-sdk.dir=C\:\\Users\\emuda\\AppData\\Local\\Android\\Sdk
+#Sat Jan 04 17:00:03 IST 2025
+sdk.dir=C\:\\Users\\Idanb\\AppData\\Local\\Android\\Sdk
